<resources>
    <string name="app_name">Vaccination Reminder</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="signup">Signup</string>
    <string name="syringeImage">syringeImage</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up_alert">Sign Up</string>
    <string name="welcome">"Welcome, "</string>
    <string name="add_children">Add Child</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="add_child_alert">Please enter the following details about your child.</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="childdobpicker">childDOBPicker</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="empty_child_name_toast">Please Enter Your Child\'s Details Correctly</string>
    <string name="headerImage">headerImage</string>
    <string name="sampleText">Sample Text</string>
    <string name="vaccines_info">Vaccines Info</string>
    <string name="alarm_manager">Alarm Manager</string>
    <string name="vacc_complete">Vaccination Complete</string>
    <string name="vaccination_day">Vaccination Day</string>
    <string name="sign_up_launcher_text">Not Registered? Sign Up Now</string>
    <string name="login_launcher_text">Already have an account? Login Here</string>
    <string name="vaccineimage">VaccineImage</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="password_visibility">passwordVisibility</string>
    <string name="add_child">Add Child</string>
</resources>
