<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <!--Example-->

        <item
            android:id="@+id/home_fragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/child_manager"
            android:icon="@drawable/child"
            android:title="@string/add_children" />
        <item
            android:id="@+id/alarm_manager"
            android:icon="@drawable/ic_alarm"
            android:title="@string/alarm_manager"/>

        <item
            android:id="@+id/vaccines_info"
            android:icon="@drawable/ic_info"
            android:title="@string/vaccines_info" />


    </group>
</menu>