<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/toptextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/sign_up_alert"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/editorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toptextview"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fullNameSignupField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="#E3E1E1"
            android:hint="@string/full_name"
            android:inputType="textCapWords"
            android:padding="4dp"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/usernameSignupField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="#E3E1E1"
            android:hint="@string/username"
            android:inputType="textNoSuggestions"
            android:padding="4dp"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/emailSignupField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="#E3E1E1"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="4dp"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/passwordSignupField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="#E3E1E1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="4dp"
            android:textSize="22sp" />
    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editorLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:onClick="signupMethod"
        android:text="@string/signup"
        android:textSize="18sp" />


</RelativeLayout>