<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/editorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fullNameSignupField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="#ff2269d4"
            android:hint="@string/full_name"
            android:inputType="textCapWords"
            android:padding="12dp"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/usernameSignupField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="#ff2269d4"
            android:hint="@string/username"
            android:inputType="textNoSuggestions"
            android:padding="12dp"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/emailSignupField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="#ff2269d4"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textSize="22sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <EditText
                android:id="@+id/passwordSignupField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#ff2269d4"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/password_signup_visibility"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@id/passwordSignupField"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/password_visibility"
                android:src="@drawable/ic_password_visibility_on" />

            <EditText
                android:id="@+id/passwordConfirmSignupField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordSignupField"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#ff2269d4"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/password_signup_confirm_visibility"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@id/passwordConfirmSignupField"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/password_visibility"
                android:src="@drawable/ic_password_visibility_on" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editorLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/button_background"
        android:fontFamily="sans-serif-light"
        android:text="@string/signup"
        android:textColor="#ffffff"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/loginLauncherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signupButton"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        android:text="@string/login_launcher_text"
        android:textColor="#ff2269d4"
        android:textSize="15sp" />

</RelativeLayout>